--- a/src/main/webapp/WEB-INF/views/thymeleaf/miDiario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/miDiario.html
@@ -112,8 +112,8 @@
                                     <tr>
                                         <td>IDR actual:</td>
                                         <td>
-                                            <p th:if="${idr != null}" th:text="${idr} + ' cal'"></p>
-                                            <p th:unless="${idr != null}">Valor de IDR no disponible</p>
+                                            <p th:if="${icr != null}" th:text="${icr} + ' cal'"></p>
+                                            <p th:unless="${icr != null}">Valor de IDR no disponible</p>
                                         </td>
                                     </tr>
                                     <tr>
