--- a/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/recetas.html
@@ -45,9 +45,9 @@
 
     <div class="contenedor-recetas">
         <div class="seccion-receta">
-            <img th:src="@{/img/receta-quinoa.jpg}" alt="receta" width="100x" height="50px">
+            <img th:src="@{/img/receta-quinoa.jpg}" alt="receta" width="100x" height="100px">
             <div class="div-textos-receta">
-                <a  th:src="@{/descripcionRecetas}" class="titulo-receta">Ensalada de quinoa con vegetales asados</a>
+                <a  th:href="@{/descripcionRecetas}" class="titulo-receta">Ensalada de quinoa con vegetales asados</a>
                 <p>Una receta facil y rapida</p>
             </div>
         </div>
