--- a/src/main/webapp/resources/core/css/main.css
+++ b/src/main/webapp/resources/core/css/main.css
@@ -243,14 +243,13 @@ font-size:1.5rem ;
 }
 
 .seccion-receta {
-    width: 250px;
+    width: 150px;
     margin-bottom: 20px;
     border-radius: 5px;
     padding: 10px;
 }
 
 .seccion-receta img {
-    width: 100%;
     border: 2px solid #4caf50;
     border-radius: 5px;
 }
@@ -271,12 +270,15 @@ font-size:1.5rem ;
 }
 
 .contenedor-busqueda{
-    margin-right: 8rem;
+    margin-rigth: 8rem;
 }
 
 .contenedor-principal-receta{
-    padding: 1rem;
-    width: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    aling-items: center;
+    padding: 3rem;
 }
 
 .contenedor-descripcion-recetas{
@@ -284,21 +286,17 @@ font-size:1.5rem ;
     flex-direction: row;
     margin-left: 8rem;
 }
-
 .contenedor-recetas {
-    padding: 0.5rem;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 9.5rem;
 }
-
 .seccion-receta{
     display: flex;
     flex-direction: row;
     padding: 1rem;
 }
-
 .div-textos-receta{
     display: flex;
     flex-direction: column;
