NavBar y Footer agregados

--- a/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/menuprincipal.html
@@ -48,7 +48,7 @@
                 <!-- Segunda fila -->
                 <div class="row mb-3">
                     <div class="col-md-12 text-center">
-                        <a th:href="@{/midiario/ejercicio}">
+                        <a th:href="@{/diarioEjercicio}">
                         <i class="fa-solid fa-dumbbell fa-5x"></i>
                         <p>kcal 2</p>
 
