--- a/src/main/webapp/WEB-INF/views/thymeleaf/descripcionRecetas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/descripcionRecetas.html
@@ -4,36 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Descripción de Receta</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" href="css/main.css"/>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!--google-fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
-    <div class="container-fluid">
-        <a th:href="@{/menuprincipal}" class="navbar-brand d-flex align-items-center " >
-
-            <img th:src="@{/img/logo1.png}" alt="Logo de FatLoss" height="60" class="d-inline-block align-top">
-            <h1 class="blanco-texto">FatLoss</h1>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a th:href="@{/perfilUsuario}" class="nav-link" >Hola, Usuario X</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/ingresarPeso}" class="nav-link" >Mi peso X kg</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/inicio}" class="nav-link">Salir</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="navbar :: navbar"></div>
 <div class="row-receta">
     <section class="contenedor-imagen-receta">
         <img th:src="@{img/receta-quinoa.jpg}"  width="200px" height="200px" alt="Platillo_quinoa_con_vegetales" class="borde-verde">
@@ -129,6 +114,7 @@
     </aside>
 </div>
 </div>
+<div th:replace="footer ::footer"></div>
 </body>
 </html>
 <style>
