--- a/src/main/webapp/WEB-INF/views/thymeleaf/diarioEjercicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/diarioEjercicio.html
@@ -5,44 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Diario De Ejercicio</title>
-
-
-     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
-    <div class="container-fluid">
-        <!-- Logo y nombre de la empresa -->
-        <a th:href="@{/menuprincipal}" class="navbar-brand d-flex align-items-center " >
-
-            <img th:src="@{/img/logo1.png}" alt="Logo de FatLoss" height="60" class="d-inline-block align-top">
-            <h1 class="blanco-texto">FatLoss</h1>
-        </a>
-        <!-- Botón de colapso para dispositivos pequeños -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Contenido del navbar -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto"> <!--  "ms-auto" para alinear a la derecha -->
-                <!-- Saludo personalizado y enlaces -->
-                <li class="nav-item">
-                    <a th:href="@{/perfilUsuario}" class="nav-link" >Hola, Usuario X</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/ingresarPeso}" class="nav-link" >Mi peso X kg</a>
-                </li>
-                <li class="nav-item">
-                    <a th:href="@{/inicio}" class="nav-link">Salir</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="navbar :: navbar"></div>
 <div class="container mt-4">
     <div class="row">
         <!-- Columna de la tarjeta -->
@@ -112,7 +82,7 @@
         </div>
     </div>
 </div>
-
+<div th:replace="footer ::footer"></div>
 </body>
 </html>
 </body>
