--- a/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
@@ -6,62 +6,15 @@
     <title>Mis Notificaciones</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
-    
-    <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        
-    <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <!--header/nav-->
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/menuprincipal}">
-                <h1 class="display-1"><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="120px">   fatloss</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Usuario</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" th:href="@{/perfilUsuario}">Perfil</a></li>
-                          <li><a class="dropdown-item" th:href="@{/configuracion}">Configuracion</a></li>
-                          <li><a class="dropdown-item active" th:href="@{#}">Notificaciones</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Mi Calendario</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" th:href="@{#}">Dieta</a></li>
-                          <li><a class="dropdown-item" th:href="@{#}">Alimentacion</a></li>
-                          <li><a class="dropdown-item" th:href="@{#}">Ejercicios</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Mi Historial</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" th:href="@{#}">Mi historial de Peso</a></li>
-                          <li><a class="dropdown-item" th:href="@{#}">Libro de Cocina</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/inicio}">Salir</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>    
-
-    <!--notificaciones-->
+<div th:replace="navbar :: navbar"></div>
     <div class="container my-3">
         <h2 class="text-center text-dark">Mis Notificaciones</h2>
         <div class="mt-4 p-5 text-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
@@ -77,27 +30,6 @@
             </div>
         </div>
     </div>
-    
-    <!--footer-->
-    <footer class="container-fluid mt-auto py-2">
-        <div class="row d-flex align-items-center">
-            <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
-            justify-content-lg-end justify-content-xl-end justify-content-xxl-end py-2">
-                <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="140px">
-            </div>
-            <div class="col-sm-5 d-flex flex-column justify-content-star">
-                <h4>TP Taller Web I: fatloss</h4>
-                <p><img th:src="@{/img/github.png}" alt="logo-github"> Github:  <a class="text-break" href="https://github.com/GonzaloFlores1121/grupo4" target="_blank">https://github.com/GonzaloFlores1121/grupo4</a></p>
-                <p><img th:src="@{/img/trello.png}" alt="logo-trello"> Trello:  <a class="text-break" href="https://trello.com/w/grupo4tallerweb" target="_blank">https://trello.com/w/grupo4tallerweb</a></p>
-            </div>
-            <div class="col-sm-5 d-flex flex-column justify-content-star">
-                <h5>Integrantes: </h5>
-                <p>Rodolfo Gutierrez - Gonzalo Flores</p>
-                <p>Milagros Chavez - Kevin Llombart</p>
-                <p>Joaquin Paiva</p>
-            </div>
-        </div>
-    </footer>    
-
+<div th:replace="footer ::footer"></div>
 </body>
 </html>
