--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilUsuario.html
@@ -18,50 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <!--header/nav-->
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/menuprincipal}">
-                <h1 class="display-1"><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="120px">   fatloss</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Usuario</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item active" th:href="@{#}">Perfil</a></li>
-                          <li><a class="dropdown-item" th:href="@{/configuracion}">Configuracion</a></li>
-                          <li><a class="dropdown-item" th:href="@{/notificaciones}">Notificaciones</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Mi Calendario</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" th:href="@{#}">Dieta</a></li>
-                          <li><a class="dropdown-item" th:href="@{#}">Alimentacion</a></li>
-                          <li><a class="dropdown-item" th:href="@{#}">Ejercicios</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Mi Historial</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" th:href="@{#}">Mi historial de Peso</a></li>
-                          <li><a class="dropdown-item" th:href="@{#}">Libro de Cocina</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/inicio}">Salir</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!--perfil-->
+<div th:replace="navbar :: navbar"></div>
     <div class="container my-5"> 
         <div class="row d-flex align-items-center">
             <div class="col-sm-3 d-flex flex-column justify-content-center my-3">
@@ -88,27 +45,6 @@
             </div>
         </div>        
     </div>
-
-    <!--footer-->
-    <footer class="container-fluid mt-auto py-2">
-        <div class="row d-flex align-items-center">
-            <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
-            justify-content-lg-end justify-content-xl-end justify-content-xxl-end py-2">
-                <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="140px">
-            </div>
-            <div class="col-sm-5 d-flex flex-column justify-content-star">
-                <h4>TP Taller Web I: fatloss</h4>
-                <p><img th:src="@{/img/github.png}" alt="logo-github"> Github:  <a class="text-break" href="https://github.com/GonzaloFlores1121/grupo4" target="_blank">https://github.com/GonzaloFlores1121/grupo4</a></p>
-                <p><img th:src="@{/img/trello.png}" alt="logo-trello"> Trello:  <a class="text-break" href="https://trello.com/w/grupo4tallerweb" target="_blank">https://trello.com/w/grupo4tallerweb</a></p>
-            </div>
-            <div class="col-sm-5 d-flex flex-column justify-content-star">
-                <h5>Integrantes: </h5>
-                <p>Rodolfo Gutierrez - Gonzalo Flores</p>
-                <p>Milagros Chavez - Kevin Llombart</p>
-                <p>Joaquin Paiva</p>
-            </div>
-        </div>
-    </footer>
-
+<div th:replace="footer ::footer"></div>
 </body>
 </html>
