--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
@@ -43,6 +43,10 @@
         <div class="col-md-8">
             <h2 class="mt-4">Detalles Personales</h2>
         <form th:action="@{/enviarFormulario}" method="post" th:object="${usuario}">
+             <div class="form-group">
+                 <label>Nombre:</label>
+                 <input type="text" class="form-control" th:field="*{nombre}" required>
+             </div>
             <div class="form-group">
                 <label>Email:</label>
                 <input type="email" class="form-control" th:field="*{email}" required>
