--- a/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/menuprincipal}">
-            <h1><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="100px">   fatloss</h1>
+            <h1><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="100px">fatloss</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" th:text="${usuario}"></a>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" th:text='${nombre}'></a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item active" th:href="@{#}">Perfil</a></li>
                         <li><a class="dropdown-item" th:href="@{#}">Configuracion</a></li>
