--- a/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
         <div class="container-fluid">
             <a class="navbar-brand" th:href="@{#}">
-                <h1 class="display-1" style="color: #5FB92E"><img th:src="@{/img/logo.png}" alt="logo" height="120px">   fatloss</h1>
+                <h1 class="display-3" style="color: #5FB92E"><img th:src="@{/img/logo.png}" alt="logo" height="120px">   fatloss</h1>
             </a>
         </div>
     </nav>
@@ -68,7 +68,7 @@
     
     <!--registro/iniciar-sesion-->
     <div class="container-fluid mb-5">
-        <h3 class="text-center mb-2" style="color: #5FB92E">Bienvenido a Fatloose</h3>
+        <h3 class="text-center mb-2" style="color: #5FB92E">Bienvenido a fatloss</h3>
         <div class="row">    
             <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center my-2">
                 <p>Comienza tu viaje hacia una vida mas saludable.</p>
