--- a/src/main/webapp/WEB-INF/views/thymeleaf/iniciar-sesion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/iniciar-sesion.html
@@ -24,15 +24,15 @@
     <nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
         <div class="container-fluid">
             <a class="navbar-brand" th:href="@{/inicio}">
-                <h1 class="display-1" style="color: #5FB92E"><img th:src="@{/img/logo.png}" alt="logo" height="120px">   fatloss</h1>
+                <h1 class="display-3" style="color: #5FB92E"><img th:src="@{/img/logo.png}" alt="logo" height="120px">   fatloss</h1>
             </a>
         </div>
     </nav>
 
     <!--iniciar-sesion-->
-    <div class="container mt-2 mb-4">
+    <div class="container my-5">
         <div class="row d-flex flex-column justify-content-center align-items-center">
-            <div class="col-sm-5 border border-3 rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
+            <div class="col-sm-5 border border-1 rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
                 <form class="p-5" th:action="@{/ingresarUsuario}" method="post">
                     <h2 class="text-center text-white mb-3">Iniciar Sesion</h2>
                     <div class="form-floating mb-3">
@@ -46,12 +46,12 @@
                     <div class="row">
                         <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center">
                             <div class="d-flex flex-column justify-content-center align-items-center">
-                                <input class="btn btn-outline-success" type="submit" name="enviar" id="enviar" value="Ingresar">
+                                <input class="btn btn-outline-dark" type="submit" name="enviar" id="enviar" value="Ingresar">
                             </div>
                         </div>
                         <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center">
                             <div class="d-flex flex-column justify-content-center align-items-center">
-                                <a class="btn btn-outline-success" th:href="@{/inicio}">Cancelar</a>
+                                <a class="btn btn-outline-dark" th:href="@{/inicio}">Cancelar</a>
                             </div>
                         </div>  
                     </div>                  
