--- a/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
@@ -6,16 +6,25 @@
     <title>Mis Notificaciones</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
+    
+    <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-<div th:replace="navbar :: navbar"></div>
-    <div class="container my-3">
+
+    <!--header/nav-->
+    <div th:replace="navbar :: navbar"></div>
+    
+    <!--notificaciones-->
+    <div class="container my-5">
         <h2 class="text-center text-dark">Mis Notificaciones</h2>
         <div class="mt-4 p-5 text-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
             <h3 class="text-white">Advertencia: </h3>
@@ -23,13 +32,16 @@
             Estas notificaciones pueden contener informacion vital sobre tu progreso, recordatorios 
             de comidas o consejos nutricionales.</p>
         </div>
-        <div class="d-flex flex-column justify-content-center m-4">
+        <div class="d-flex flex-column justify-content-center mx-5 my-3">
             <div class="alert alert-success alert-dismissible fade show" th:each="notificacion : ${notificaciones}">
                 <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                 <strong th:text="${notificacion.key}"></strong>: <span th:text="${notificacion.value}"></span>
             </div>
         </div>
     </div>
-<div th:replace="footer ::footer"></div>
+
+    <!--footer-->
+    <div th:replace="footer ::footer"></div>
+
 </body>
 </html>
