--- a/src/main/webapp/WEB-INF/views/thymeleaf/iniciar-sesion.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/iniciar-sesion.html
@@ -33,7 +33,7 @@
     <div class="container my-5">
         <div class="row d-flex flex-column justify-content-center align-items-center">
             <div class="col-sm-5 border border-1 rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
-                <form class="p-5" th:action="@{/ingresarUsuario}" method="post">
+                <form class="p-5" th:action="@{/validarLogin}" method="post" th:object="${usuario}">
                     <h2 class="text-center text-white mb-3">Iniciar Sesion</h2>
                     <div class="form-floating mb-3">
                         <input class="form-control" type="email" name="email" id="email" placeholder="Ingresar" required>
@@ -52,6 +52,7 @@
                         <div class="col-sm-6 d-flex flex-column justify-content-center align-items-center">
                             <div class="d-flex flex-column justify-content-center align-items-center">
                                 <a class="btn btn-outline-dark" th:href="@{/inicio}">Cancelar</a>
+
                             </div>
                         </div>  
                     </div>                  
@@ -59,7 +60,7 @@
             </div>
         </div>
     </div>  
-
+  <strong>Error: </strong><span th:text="${error}"></span>
     <!--footer-->
     <footer class="container-fluid mt-auto py-2">
         <div class="row d-flex align-items-center">
