--- a/src/main/webapp/WEB-INF/views/thymeleaf/ejercicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/ejercicio.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <title>Actividad</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 <body>
 <div th:replace="navbar :: navbar"></div>
@@ -15,50 +13,39 @@
 <div class="container mt-4 ejercicio_cuadro">
     <div class="row">
         <div class="col-md-6">
-            <h2 class="mb-3 titulos_ejercicio">Estimación de Energía Quemada por Caminar (Lento)</h2>
-            <table class="table">
+            <h2 class="mb-3 titulos_ejercicio" th:text="'Estimación de Energía Quemada por ' + ${ejercicio.nombre} + ' (' + ${ejercicio.intensidad} + ')'"></h2>
+            <form th:action="@{/guardarEjercicio}" method="POST">
+                <input type="hidden" name="idEjercicio" th:value="${ejercicio.id}" />
+                <input type="hidden" name="intensidad" th:value="${ejercicio.intensidad}" />
 
-       <div class="col-md-6 formulario_actividad">
-           <h2 class="titulos_ejercicio">Agregar Actividad a mi <br><a th:href="@{/diarioEjercicio}">Diario de Ejercicios</a></h2>
-           <form>
-               <div class="form-row">
-                   <div class="form-group col-md-4">
-                       <label for="dia">Día:</label>
-                       <input type="number" class="form-control" id="dia" placeholder="Día" min="1" max="31">
-                   </div>
-                   <div class="form-group col-md-4">
-                       <label for="mes">Mes:</label>
-                       <input type="number" class="form-control" id="mes" placeholder="Mes" min="1" max="12">
-                   </div>
-                   <div class="form-group col-md-4">
-                       <label for="año">Año:</label>
-                       <input type="number" class="form-control" id="año" placeholder="Año" min="1900" max="2100">
-                   </div>
-               </div>
-               <div class="form-group">
-                   <label for="tiempo">Tiempo empleado:</label>
-                   <div class="row">
-                       <div class="col">
-                           <input type="number" class="form-control" id="horas" placeholder="Horas" min="0">
-                       </div>
-                       <div class="col">
-                           <input type="number" class="form-control" id="minutos" placeholder="Minutos" min="0" max="59">
-                       </div>
-                   </div>
-               </div>
-               <div class="form-group">
-                   <label for="actividad">Cuéntanos cómo te sentiste:</label>
-                   <textarea class="form-control" id="comentarios" rows="5" placeholder="Ingresa tus comentarios aquí..."></textarea>
-               </div>
-               <button type="submit" class="btn btn-primary">Guardar</button>
-               <button type="button" class="btn btn-secondary">Cancelar</button>
-           </form>
-
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="dia">Día:</label>
+                        <input type="number" class="form-control" id="dia" name="dia" placeholder="Día" min="1" max="31">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="mes">Mes:</label>
+                        <input type="number" class="form-control" id="mes" name="mes" placeholder="Mes" min="1" max="12">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="año">Año:</label>
+                        <input type="number" class="form-control" id="año" name="anio" placeholder="Año" min="1900" max="2100">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="minutos">Tiempo empleado (minutos):</label>
+                    <input type="Integer" class="form-control" id="minutos" name="minutos" placeholder="Minutos" min="0">
+                </div>
+                <button type="submit" class="btn btn-primary">Guardar</button>
+                <button type="button" class="btn btn-secondary">Cancelar</button>
+            </form>
+            <p th:text="${mensaje}"></p>
         </div>
     </div>
 </div>
 
 <div th:replace="footer ::footer"></div>
+
 <script th:src="@{https://code.jquery.com/jquery-3.5.1.slim.min.js}"></script>
 <script th:src="@{https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js}"></script>
 <script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js}"></script>
