--- a/src/main/webapp/WEB-INF/views/thymeleaf/ejercicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/ejercicio.html
@@ -20,16 +20,8 @@
 
                 <div class="form-row">
                     <div class="form-group col-md-4">
-                        <label for="dia">Día:</label>
-                        <input type="number" class="form-control" id="dia" name="dia" placeholder="Día" min="1" max="31">
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="mes">Mes:</label>
-                        <input type="number" class="form-control" id="mes" name="mes" placeholder="Mes" min="1" max="12">
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="año">Año:</label>
-                        <input type="number" class="form-control" id="año" name="anio" placeholder="Año" min="1900" max="2100">
+                        <label for="fecha">Fecha:</label>
+                      <input type="date" class="form-control" id="fecha" name="fecha" placeholder="Fecha" >
                     </div>
                 </div>
                 <div class="form-group">
